<resources>

    <string name="app_name">Logic\nMarket</string>
    <string name="title_laptop_list">Laptops</string>
    <string name="title_product_detail">Detalle del producto</string>
    <string name="laptop_title">Product Title</string>
    <string name="laptop_description">Product description</string>
    <string name="announce_cell">Envío con normalidad</string>
    <string name="error_message">No se encontraron datos con la búsqueda. Porfavor vuelva a internarlo</string>
    <string name="description_image">Imágen del producto</string>
    <string name="description_like_icon">favourite icon</string>
    <string name="product_title_lower">Product Title</string>
    <string name="sold_counter">Nuevo | 1284 vendidos</string>
    <string name="error_system">Hubo un error. Por favor intente nuevamente</string>
    <string name="description_ranking">icono de estrella para ranking</string>
    <string name="_32">(32)</string>
    <string name="add_to_cart">Agregar a tu carrito</string>

</resources>