<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.fragmentProductDetail.FragmentProductDetail"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_header_height">

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/ic_laptop"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".7"
                android:background="@drawable/gradient_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_space_40"
            android:background="@drawable/rounded_corners"
            android:translationY="-35sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:paddingStart="@dimen/base_space"
            android:paddingLeft="@dimen/base_space"
            android:paddingEnd="@dimen/base_space"
            android:translationY="@dimen/translation_y"
            android:layout_weight="65"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/saleCounterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/base_space"
                android:paddingRight="@dimen/base_space"
                android:text="@string/sold_counter"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/secondary_text"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@+id/saleCounterText"
                app:layout_constraintBottom_toBottomOf="@+id/saleCounterText"
                app:layout_constraintStart_toEndOf="@+id/saleCounterText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1">

                <include layout="@layout/star" />
                <include layout="@layout/star" />
                <include layout="@layout/star" />

                <ImageView
                    android:layout_width="@dimen/base_mini_icon"
                    android:layout_height="@dimen/base_mini_icon"
                    android:src="@drawable/ic_baseline_star_half_24"
                    android:tint="@color/secondaryColor" />

                <ImageView
                    android:layout_width="@dimen/base_mini_icon"
                    android:layout_height="@dimen/base_mini_icon"
                    android:src="@drawable/ic_baseline_star_border_24"
                    android:tint="@color/secondaryColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_space_between"
                    android:layout_marginLeft="@dimen/base_space_between"
                    android:text="@string/_32"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/mini_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="@string/product_title_lower"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/base_title_detail"
                android:paddingBottom="@dimen/base_mini_space"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/base_small_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/envio" />

            <TextView
                android:id="@+id/textViewDetailDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/base_space"
                android:paddingRight="@dimen/base_space"
                tools:text="@string/laptop_description"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/primary_text"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetailTitle"
                tools:ignore="RtlSymmetry"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"/>

            <TextView
                android:id="@+id/envio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_small_space"
                android:background="@drawable/rounded_corner_background"
                android:backgroundTint="@color/secondaryColor"
                android:paddingStart="@dimen/base_mini_space"
                android:paddingLeft="@dimen/base_mini_space"
                android:paddingEnd="@dimen/base_mini_space"
                android:text="@string/announce_cell"
                android:textColor="@color/white"
                android:textSize="@dimen/mini_text"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saleCounterText"
                tools:ignore="SmallSp"
                app:layout_constraintHorizontal_bias="0"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraitBtnAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                android:backgroundTint="@color/secondaryColor"
                android:layout_marginTop="@dimen/base_space_30"
                android:layout_marginBottom="60dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetailDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/base_small_space"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>