<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="laptop"
            type="com.example.logicmarketchallenge.core.entities.Laptop"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/base_corner_radius"
        android:clickable="true"
        android:layout_marginTop="8sp"
        android:focusable="true"
        android:layout_marginLeft="@dimen/base_space"
        android:layout_marginRight="@dimen/base_space"
        android:layout_marginBottom="8sp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="@dimen/base_space"
        android:layout_marginEnd="@dimen/base_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="@dimen/base_small_space">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/roundedImageProduct"
                android:layout_width="100sp"
                android:layout_height="100sp"
                app:riv_corner_radius="@dimen/base_corner_radius"
                android:maxHeight="100sp"
                tools:src="@drawable/ic_laptop"
                android:tint="@color/tagLightColor"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/base_space"
                android:layout_marginLeft="@dimen/base_space">

                <TextView
                    android:id="@+id/textViewProductTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="@string/laptop_title"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/base_title"
                    android:textStyle="normal"
                    android:paddingEnd="@dimen/base_space"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintHorizontal_bias="0"
                    android:paddingRight="@dimen/base_space"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewProductDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_dimen_2"
                    android:ellipsize="end"
                    android:maxLines="2"
                    tools:text="@string/laptop_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/secondary_text"
                    android:textStyle="normal"
                    android:paddingEnd="@dimen/base_space"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProductTitle"
                    android:paddingRight="@dimen/base_space"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewAnnounce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_background"
                    android:backgroundTint="@color/secondaryColor"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="@dimen/base_mini_space"
                    android:paddingLeft="@dimen/base_mini_space"
                    android:paddingEnd="@dimen/base_mini_space"
                    android:layout_marginBottom="2sp"
                    android:text="@string/announce_cell"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintVertical_bias="1"
                    tools:ignore="SmallSp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
